Bug 96191 - Broken URL in error message
Summary: Broken URL in error message
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-25 10:26 UTC by Bastien Nocera
Modified: 2016-05-30 06:17 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Bastien Nocera 2016-05-25 10:26:01 UTC
libinput-1.3.0-2.fc24.x86_64

May 25 12:18:43 classic /usr/libexec/gdm-x-session[1700]: (EE) kernel bug: Touch jump detected and discarded.
May 25 12:18:43 classic /usr/libexec/gdm-x-session[1700]: See https://wayland.freedesktop.org/libinput/doc/1.3.0/touchpad_jumping_cursor for details
Comment 1 Peter Hutterer 2016-05-30 06:17:23 UTC
oops. fixed, thanks.

commit 83b0f3c4f3792bbba55f10901583b56f45ad81e0
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon May 30 16:09:42 2016 +1000

    touchpad: fix link in error message - add missing '.html'


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.